@startuml
class BloodProp {
+ <<Create>> BloodProp(int,int,int,int,int,String)
+ void activate(HeroAircraft)
}
abstract class AbstractEnemy {
- int score
- String type
+ <<Create>> AbstractEnemy(int,int,int,int,int,int,String)
+ void forward()
+ List<BaseBullet> shoot()
+ int getScore()
+ void setScore(int)
+ String getType()
}
class HeroBullet {
+ <<Create>> HeroBullet(int,int,int,int,int)
}
class BaseBullet {
- int power
+ <<Create>> BaseBullet(int,int,int,int,int)
+ void forward()
+ int getPower()
}
class EliteEnemy {
- int shootNum
- int power
- int direction
+ <<Create>> EliteEnemy(int,int,int,int,int,int,String)
+ void forward()
+ List<BaseBullet> shoot()
+ int getShootNum()
+ void setShootNum(int)
+ int getPower()
+ void setPower(int)
}
class HeroAircraft {
- int shootNum
- int power
- int direction
+ <<Create>> HeroAircraft(int,int,int,int,int)
+ void forward()
+ List<BaseBullet> shoot()
+ int getShootNum()
+ void setShootNum(int)
+ int getPower()
+ void setPower(int)
}
abstract class AbstractAircraft {
# int maxHp
# int hp
+ <<Create>> AbstractAircraft(int,int,int,int,int)
+ void decreaseHp(int)
+ void increaseHp(int)
+ int getHp()
+ {abstract}List<BaseBullet> shoot()
}
abstract class FlyingObject {
# int locationX
# int locationY
# int speedX
# int speedY
# BufferedImage image
# int width
# int height
# boolean isValid
+ <<Create>> FlyingObject()
+ <<Create>> FlyingObject(int,int,int,int)
+ void forward()
+ boolean crash(FlyingObject)
+ int getLocationX()
+ int getLocationY()
+ void setLocation(double,double)
+ int getSpeedY()
+ BufferedImage getImage()
+ int getWidth()
+ int getHeight()
+ boolean notValid()
+ void vanish()
+ void explode()
}
class BossEnemy {
+ <<Create>> BossEnemy(int,int,int,int,int,int,String)
}
class MobEnemy {
+ <<Create>> MobEnemy(int,int,int,int,int,int,String)
}
class BombProp {
+ <<Create>> BombProp(int,int,int,int,int,String)
+ void activate(List<AbstractEnemy>)
}
class BulletProp {
+ <<Create>> BulletProp(int,int,int,int,int,String)
+ void activate(HeroAircraft)
}
class EnemyBullet {
+ <<Create>> EnemyBullet(int,int,int,int,int)
}
abstract class AbstractProp {
+ <<Create>> AbstractProp(int,int,int,int,int,String)
+ void activate(HeroAircraft)
+ void activate(List<AbstractEnemy>)
}


AbstractProp <|-- BloodProp
AbstractAircraft <|-- AbstractEnemy
BaseBullet <|-- HeroBullet
FlyingObject <|-- BaseBullet
MobEnemy <|-- EliteEnemy
AbstractAircraft <|-- HeroAircraft
FlyingObject <|-- AbstractAircraft
EliteEnemy <|-- BossEnemy
AbstractEnemy <|-- MobEnemy
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp
BaseBullet <|-- EnemyBullet
AbstractEnemy <|-- AbstractProp
@enduml